another go at this exercise

--- a/style.css
+++ b/style.css
@@ -13,3 +13,11 @@ button#generate:hover {
 #generate-counter {
     padding: 10px;
 }
+
+.change {
+    background-color: yellow;
+}
+
+.change.red {
+    background-color: red;
+}
